<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        tools:context=".ACWidgetSetting">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1">

        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/select_ac"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="181dp" />

        <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="214dp" />

        <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_button_state"
                android:text="@string/ok" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">


        <Button
                android:text="@string/setup_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setupDescriptionBtn"
                android:background="@drawable/setting_button_state"
                android:layout_margin="@dimen/setTokenBtn_margin"
                android:padding="@dimen/setTokenBtn_padding"/>

        <Button
                android:text="@string/get_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/getTokenBtn"
                android:background="@drawable/setting_button_state"
                android:layout_margin="@dimen/setTokenBtn_margin"
                android:padding="@dimen/setTokenBtn_padding"/>

        <Button
                android:id="@+id/setTokenBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_button_state"
                android:layout_margin="@dimen/setTokenBtn_margin"
                android:text="@string/set_token"
                android:padding="@dimen/setTokenBtn_padding"/>

    </LinearLayout>

</LinearLayout>