<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MonitorSetting">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1">

        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/textView"/>
        <Button
                android:text="@string/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_button_state"
                android:id="@+id/okBtn"/>
    </LinearLayout>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:gravity="end">

        <Button
                android:text="@string/setup_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setupDescriptionBtn"
                android:background="@drawable/setting_button_state"
                android:layout_margin="@dimen/setTokenBtn_margin"
                android:padding="@dimen/setTokenBtn_padding"/>

        <Button
                android:text="@string/get_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/getTokenBtn"
                android:background="@drawable/setting_button_state"
                android:layout_margin="@dimen/setTokenBtn_margin"
                android:padding="@dimen/setTokenBtn_padding"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setTokenBtn"
                android:background="@drawable/setting_button_state"
                android:layout_margin="@dimen/setTokenBtn_margin"
                android:text="@string/set_token"
                android:padding="@dimen/setTokenBtn_padding"/>
    </LinearLayout>
</LinearLayout>